<resources>
    <string name="app_name">CalculatorKotlin</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="div">/</string>
    <string name="mul">*</string>
    <string name="result">=</string>
    <string name="dot">"\u002E"</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="backSpace">"\u232b"</string>
    <string name="clearAll">C</string>

    <string name="about">About</string>

</resources>